--- a/Michus/Views/Shared/_Layout.cshtml
+++ b/Michus/Views/Shared/_Layout.cshtml
@@ -89,7 +89,7 @@
 
             // Función para renderizar el menú
             function renderMenu(items) {
-                let html = '<ul class="nav flex-column" style=" list-style: none; margin-top: 25%; margin-left: -50px;">';
+                let html = '<ul class="nav flex-column menu-container"  style=" list-style: none; margin-top: 25%; margin-left: -50px;">';
                 items.forEach(item => {
                     if (item.ESTADO_MENU) {
                         html += `<li class="nav-item">
