--- a/Michus/wwwroot/assets/css/PromocionesStyle.css
+++ b/Michus/wwwroot/assets/css/PromocionesStyle.css
@@ -1,4 +1,4 @@
-﻿body {
+body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -314,17 +314,17 @@ input[type="checkbox"] {
     }
 
 /* Estilo para el botón de cerrar */
-.close-btn {
+.close-detalle {
     position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 30px;
+    top: 55px;
+    right: 110px;
+    font-size: 28px;
     color: #666;
     text-decoration: none;
     transition: all 0.3s;
 }
 
-    .close-btn:hover {
+    .close-detalle:hover {
         color: #333;
     }
 
@@ -405,17 +405,17 @@ input[type="checkbox"] {
     }
 
 /* Estilo para el botón de cerrar */
-.close-btn {
+.close-agregar {
     position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 30px;
+    top: 25px;
+    right: 90px;
+    font-size: 50px;
     color: #666;
     text-decoration: none;
     transition: all 0.3s;
 }
 
-    .close-btn:hover {
+    .close-agregar:hover {
         color: #333;
     }
 
@@ -686,3 +686,4 @@ input[type="checkbox"] {
         background-color: #e1f1ff;
         border-color: #0056b3;
     }
+
